// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GmailEmailCard > matches snapshot: minimal email (no subject, no labels) 1`] = `
<div
  aria-label="No Subject from notifications@github.com"
  class="gmail-email-card"
  role="listitem"
  tabindex="0"
>
  <div
    aria-hidden="true"
    class="gmail-email-card__avatar"
    style="background-color: hsl(138, 55%, 45%);"
  >
    NO
  </div>
  <div
    class="gmail-email-card__content"
  >
    <div
      class="gmail-email-card__subject"
    >
      No Subject
    </div>
    <div
      class="gmail-email-card__meta"
    >
      <span
        class="gmail-email-card__from"
      >
        notifications@github.com
      </span>
      <span
        class="gmail-email-card__date"
      >
        Mar 4
      </span>
    </div>
    <div
      class="gmail-email-card__snippet"
    >
      You were mentioned in a comment on issue #42.
    </div>
  </div>
  <div
    class="gmail-email-card__actions"
  />
  <div
    aria-label="Quick actions"
    class="gmail-email-card__quick-actions"
  >
    <button
      aria-label="Archive email"
      class="gmail-email-card__quick-btn"
      title="Archive"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M1.5 4.5h13M2.5 4.5v8a1 1 0 001 1h9a1 1 0 001-1v-8M5.5 7.5h5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
        <path
          d="M0.5 2.5h15v2h-15z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
    <button
      aria-label="Reply to email"
      class="gmail-email-card__quick-btn"
      title="Reply"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M6.5 4L2.5 8l4 4M2.5 8h7a4 4 0 014 4"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
    <button
      aria-label="Snooze email"
      class="gmail-email-card__quick-btn"
      title="Snooze"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <circle
          cx="8"
          cy="8.5"
          r="5.5"
          stroke="currentColor"
          stroke-width="1.3"
        />
        <path
          d="M8 5.5v3l2 1.5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
        <path
          d="M5.5 1.5h5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`GmailEmailCard > matches snapshot: read email 1`] = `
<div
  aria-label="Lunch next week? from Bob Martinez"
  class="gmail-email-card"
  role="listitem"
  tabindex="0"
>
  <div
    aria-hidden="true"
    class="gmail-email-card__avatar"
    style="background-color: hsl(195, 55%, 45%);"
  >
    BM
  </div>
  <div
    class="gmail-email-card__content"
  >
    <div
      class="gmail-email-card__subject"
    >
      Lunch next week?
    </div>
    <div
      class="gmail-email-card__meta"
    >
      <span
        class="gmail-email-card__from"
      >
        Bob Martinez
      </span>
      <span
        class="gmail-email-card__date"
      >
        Mar 5
      </span>
    </div>
    <div
      class="gmail-email-card__snippet"
    >
      Are you free Tuesday or Wednesday? There's a new ramen spot downtown I've been wanting to try.
    </div>
  </div>
  <div
    class="gmail-email-card__actions"
  />
  <div
    aria-label="Quick actions"
    class="gmail-email-card__quick-actions"
  >
    <button
      aria-label="Archive email"
      class="gmail-email-card__quick-btn"
      title="Archive"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M1.5 4.5h13M2.5 4.5v8a1 1 0 001 1h9a1 1 0 001-1v-8M5.5 7.5h5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
        <path
          d="M0.5 2.5h15v2h-15z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
    <button
      aria-label="Reply to email"
      class="gmail-email-card__quick-btn"
      title="Reply"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M6.5 4L2.5 8l4 4M2.5 8h7a4 4 0 014 4"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
    <button
      aria-label="Snooze email"
      class="gmail-email-card__quick-btn"
      title="Snooze"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <circle
          cx="8"
          cy="8.5"
          r="5.5"
          stroke="currentColor"
          stroke-width="1.3"
        />
        <path
          d="M8 5.5v3l2 1.5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
        <path
          d="M5.5 1.5h5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`GmailEmailCard > matches snapshot: starred email 1`] = `
<div
  aria-label="Unread: Design review feedback from Carol Wei"
  class="gmail-email-card gmail-email-card--unread"
  role="listitem"
  tabindex="0"
>
  <div
    aria-hidden="true"
    class="gmail-email-card__avatar"
    style="background-color: hsl(4, 55%, 45%);"
  >
    CW
  </div>
  <div
    class="gmail-email-card__content"
  >
    <div
      class="gmail-email-card__subject"
    >
      Design review feedback
    </div>
    <div
      class="gmail-email-card__meta"
    >
      <span
        class="gmail-email-card__from"
      >
        Carol Wei
      </span>
      <span
        class="gmail-email-card__date"
      >
        Mar 6
      </span>
    </div>
    <div
      class="gmail-email-card__snippet"
    >
      Overall looks great! A few minor tweaks on the navigation component — see inline comments.
    </div>
  </div>
  <div
    class="gmail-email-card__actions"
  >
    <span
      class="gmail-email-card__urgency gmail-email-card__urgency--medium"
    >
      medium
    </span>
    <span
      class="gmail-email-card__star"
    >
      ★
    </span>
  </div>
  <div
    aria-label="Quick actions"
    class="gmail-email-card__quick-actions"
  >
    <button
      aria-label="Archive email"
      class="gmail-email-card__quick-btn"
      title="Archive"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M1.5 4.5h13M2.5 4.5v8a1 1 0 001 1h9a1 1 0 001-1v-8M5.5 7.5h5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
        <path
          d="M0.5 2.5h15v2h-15z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
    <button
      aria-label="Reply to email"
      class="gmail-email-card__quick-btn"
      title="Reply"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M6.5 4L2.5 8l4 4M2.5 8h7a4 4 0 014 4"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
    <button
      aria-label="Snooze email"
      class="gmail-email-card__quick-btn"
      title="Snooze"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <circle
          cx="8"
          cy="8.5"
          r="5.5"
          stroke="currentColor"
          stroke-width="1.3"
        />
        <path
          d="M8 5.5v3l2 1.5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
        <path
          d="M5.5 1.5h5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`GmailEmailCard > matches snapshot: unread email with urgency 1`] = `
<div
  aria-label="Unread: Q3 Revenue Report — Action Required from Alice Johnson"
  class="gmail-email-card gmail-email-card--unread"
  role="listitem"
  tabindex="0"
>
  <div
    aria-hidden="true"
    class="gmail-email-card__avatar"
    style="background-color: hsl(273, 55%, 45%);"
  >
    AJ
  </div>
  <div
    class="gmail-email-card__content"
  >
    <div
      class="gmail-email-card__subject"
    >
      Q3 Revenue Report — Action Required
    </div>
    <div
      class="gmail-email-card__meta"
    >
      <span
        class="gmail-email-card__from"
      >
        Alice Johnson
      </span>
      <span
        class="gmail-email-card__date"
      >
        Mar 7
      </span>
    </div>
    <div
      class="gmail-email-card__snippet"
    >
      Hey team, please review the attached Q3 numbers before Friday's board meeting. Key highlights…
    </div>
  </div>
  <div
    class="gmail-email-card__actions"
  >
    <span
      class="gmail-email-card__urgency gmail-email-card__urgency--high"
    >
      high
    </span>
    <span
      class="gmail-email-card__star"
    >
      ☆
    </span>
  </div>
  <div
    aria-label="Quick actions"
    class="gmail-email-card__quick-actions"
  >
    <button
      aria-label="Archive email"
      class="gmail-email-card__quick-btn"
      title="Archive"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M1.5 4.5h13M2.5 4.5v8a1 1 0 001 1h9a1 1 0 001-1v-8M5.5 7.5h5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
        <path
          d="M0.5 2.5h15v2h-15z"
          stroke="currentColor"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
    <button
      aria-label="Reply to email"
      class="gmail-email-card__quick-btn"
      title="Reply"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M6.5 4L2.5 8l4 4M2.5 8h7a4 4 0 014 4"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
    <button
      aria-label="Snooze email"
      class="gmail-email-card__quick-btn"
      title="Snooze"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <circle
          cx="8"
          cy="8.5"
          r="5.5"
          stroke="currentColor"
          stroke-width="1.3"
        />
        <path
          d="M8 5.5v3l2 1.5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.3"
        />
        <path
          d="M5.5 1.5h5"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="1.3"
        />
      </svg>
    </button>
  </div>
</div>
`;
